<resources>
    <string name="app_name">GitStat</string>
    <string name="app_name_with_version">GitStat v%1$s</string>

    <string name="app_description"><![CDATA[
        <b>GitStat</b> is a simple android app designed to aggregate Github profile data into informative cards and graphs.
        <br/>
        <br/>
        The application is built using <b>Github GraphQL API</b> and <b>apollo-android</b> client for API calls.
        <br/>
        <br/>
        <b>Major features:</b>
        <br/>
        - Github profile summary <br/>
        - Pie chart with programming languages of your repositories <br/>
        - List of your repositories with filters and sorting <br/>
        - Contributions summary <br/>
        - Charts for contributions (types, count per day, contribution rate) <br/>
        - Contributions grid (Github-like)
    ]]>
    </string>
    
    <string name="privacy_policy_url">https://sites.google.com/view/gitstat-privacypolicy/home</string>

    <string name="privacy_policy_full_text"><![CDATA[
    - The application <b>Github Oauth</b> (Firebase) for user authentication.
    As soon as you click the login button, system opens the browser.
    You have to enter the login and password from your <b>Github account</b>.
    <br>
    <br>
    - As <b>Oauth</b> method is used for authentication, even if you log out, you may be able log in again without entering your Github login and password.
    <b>Clear your browser cache</b> after logging out if you wish to change GitHub account.
    <br>
    <br>
    - The application gets access to <b><i>read:user</i></b> and <b><i>repo</i></b> access scopes.
    <br>
    <br>
    - The application <b>does not perform any write operations</b> on your github account.
    <br>
    <br>
    - Full <b><i>repo</i></b> scope is used only to have access to your private repos data and not to perform malicious write operations.
    <br>
    <br>
    - The application <b>does not store</b> your GitHub account data anywhere outside the device local storage.
    ]]>
    </string>

    <string name="OAUTH_PROVIDER">github.com</string>

    <string name="login_string">\@%s</string>
    <string name="profile_date_format">dd.MM.yyyy HH:mm</string>

    <string name="sign_in">Sign in with GitHub</string>
    <string name="login_label">Analyze your GitHub activity with clarity</string>

    <string name="repos">Repositories</string>

    <string name="profile">Profile</string>
    <string name="total_repos">Total repos</string>
    <string name="public_repos">Public repos</string>
    <string name="private_repos">Private repos</string>

    <string name="shared_pref_token">SHARED_PREF_TOKEN</string>
    <string name="shared_pref_last_version_code">SHARED_PREF_VERSION_CODE</string>

    <string name="id">ID</string>
    <string name="created">Created</string>
    <string name="updated">Updated</string>
    <string name="followers">Followers</string>
    <string name="location">Location</string>
    <string name="total">total</string>
    <string name="public_">public</string>
    <string name="private_">private</string>
    <string name="private_start_capital">Private</string>
    <string name="public_start_capital">Public</string>

    <string name="error_cant_get_data_remote">Failed to get data from GitHub. Check your internet connection and try again</string>
    <string name="error_sync_authorization">Something is wrong with your authorization token. It may have expired or was revoked. Try to login again.</string>
    <string name="authorization_error">Authorization error</string>

    <string name="repositories_by_language">Repositories by language</string>
    <string name="more_underlined"><u>More</u></string>
    <string name="filters">Filters</string>
    <string name="clear_underlined"><u>Clear</u></string>

    <string name="shared_prefs_filters">SP_filters</string>

    <string name="fork">Fork</string>
    <string name="sorting_type">Sorting type</string>
    <string name="repository_name">Repository name</string>
    <string name="creation_date">Creation date</string>
    <string name="sorting_order">Sorting order</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="include_repositories">Include repositories</string>
    <string name="all">All</string>
    <string name="public_only">Public only</string>
    <string name="private_only">Private only</string>
    <string name="forks_only">Forks only</string>
    <string name="exclude_forks">Exclude forks</string>
    <string name="include_languages">Include languages</string>
    <string name="apply">Apply</string>
    <string name="contributions">Contributions</string>
    <string name="active">Active</string>
    <string name="archived">Archived</string>

    <string name="total_contributions">total contributions</string>
    <string name="contributions_rate">contributions rate</string>
    <string name="no_contributions_for_period">No contributions for this period of time :(</string>

    <string name="sync_notification_title">Updating data from GitHub</string>
    <string name="stage_profile">1 / 3 Fetching profile…</string>
    <string name="stage_repositories">2 / 3 Fetching repositories…</string>
    <string name="stage_contributions">3 / 3 Fetching contributions…</string>
    <string name="sync_success">Data updated successfully</string>

    <string name="shared_pref_cache_sync_date">SHARED_PREF_CACHE_SYNC_DATE_2</string>
    <string name="contributions_per_year">Contributions per year</string>
    <string name="contribution_rate_dynamics">Contribution rate dynamics</string>

    <string name="privacy_policy_text">Check how do we manage your data in the Privacy Policy.</string>
    <string name="privacy_policy_clickable">Privacy Policy</string>

    <string name="privacy_policy">Privacy Policy</string>

    <string name="refresh">Refresh</string>
    <string name="failed_load_page">Failed to load the page. Check your Internet connection and try again.</string>
    <string name="error">Error</string>
    <string name="contribution_types">Contribution types</string>

    <string name="log_out_message">Press "log out" to clear cache and token. You will be taken to the login page.</string>
    <string name="last_cr">Last CR</string>
    <string name="peak_cr">Peak CR</string>
    <string name="do_you_really_want_to_log_out">Do you really want to log out?</string>
    <string name="log_out">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="failed_to_sync_data">Failed to sync data</string>
    <string name="retry">Retry</string>
    <string name="updating_data_cache">Updating data cache…</string>
    <string name="year_cr">Year CR</string>

    <string name="auth_explanation">Please, login with your GitHub in browser</string>
    <string name="oauth_error_generic">Authorization error. Check your Internet connection and try again. Also make sure you don\'t close the browser until authorization is complete.</string>
    <string name="go_to_login_screen">Go to login screen</string>

    <string name="ok">OK</string>


    <string name="what_is_contribution_rate_title">What is contribution rate?</string>
    <string name="what_is_contribution_rate_text">Contribution rate (CR) is an average contributions count for the given period.</string>

    <string name="contribution_rate_dynamics_help_title">What\'s on these charts?</string>
    <string name="contribution_rate_dynamics_help_text">On all of the years charts the total contribution rate dynamics is presented (for the period from registration date).</string>

    <string name="no_repositories">You have no repositories</string>
    <string name="no_active_repos_list">You have no active repositories</string>
    <string name="no_active_repos_list_check_filters">No active repositories found. Consider checking your filters settings</string>
    <string name="no_archived_repos_list">You have no archived repositories</string>
    <string name="no_archived_repos_list_check_filters">No archived repositories found. Consider checking your filters settings</string>
    <string name="about_app">About the app</string>

    <string name="fg_notification_channel">GitStat service notification</string>
    <string name="NOTIFICATION_CHANNEL_ID">GITSTAT_NOTIFICATION_CHANNEL_ID</string>
    <string name="year_toolbar_title">Your %1$d</string>

    <string name="daily_contributions_template">%1$s contribution(s)</string>
    <string name="disk_usage_template">%1$d KB</string>
    <string name="forked_from_template"><![CDATA[<b>Forked from:</b> %1$s]]></string>
    <string name="private_repos_access">Private repos access</string>
    <string name="permission_notifications_explanation">Please, provide Notifications permission to show your activities and data sync status</string>
    <string name="recent_month">Recent month</string>
    <string name="try_again">Try again</string>
    <string name="unknown_error_try_login">An unknown error happened on data sync. Try login again</string>
    <string name="got_it">Got it</string>
    <string name="an_error_happened">An error happened...</string>

</resources>