<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        style="@style/ToolbarStyle"
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:title="@string/privacy_policy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <WebView
        android:id="@+id/webView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <!-- Do not remove clickable -->
    <FrameLayout
        android:id="@+id/progressView"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#8DEAEAEA"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:indeterminateTint="@color/gray_400"/>

    </FrameLayout>


    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:id="@+id/errorCard"
        android:elevation="5dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/background_card_sync"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/gray_500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"/>

        <TextView
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:text="@string/failed_load_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/PrimaryButton"
            android:id="@+id/reloadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refresh"/>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
