<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="20dp"
    tools:context=".view.repositories.ReposOverviewFragment">

    <TextView
            style="@style/FragmentTitle"
            android:id="@+id/fragmentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repos"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        style="@style/ShowMoreButtonStyle"
        android:id="@+id/toReposListBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_underlined"
        app:layout_constraintTop_toTopOf="@id/fragmentTitle"
        app:layout_constraintBottom_toBottomOf="@id/fragmentTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        />


    <LinearLayout
        style="@style/PrimaryCardStyle"
        android:padding="20dp"
        android:id="@+id/reposCountCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentTitle"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderNumberStyle"
                android:id="@+id/totalReposCountView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                tools:text="0" />

            <TextView
                style="@style/HeaderLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderNumberStyle"
                android:id="@+id/publicReposCountView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                tools:text="0" />

            <TextView
                style="@style/HeaderLabelStyle"
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/public_"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/HeaderNumberStyle"
                android:id="@+id/privateReposCountView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                tools:text="0" />

            <TextView
                style="@style/HeaderLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/private_"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/PrimaryCardStyle"
        android:id="@+id/languagesCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reposCountCard">

        <TextView
            style="@style/CardHeaderStyle"
            android:id="@+id/chartTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/repositories_by_language"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/languagesChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="400dp">

        </com.github.mikephil.charting.charts.PieChart>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>