<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

±    <TextView
        android:id="@+id/appName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        tools:text="GitStat"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/login_label"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintBottom_toTopOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:padding="20dp"
        android:elevation="10dp"
        app:srcCompat="@drawable/ic_app"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintBottom_toTopOf="@id/signInBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in"
        app:iconSize="20dp"
        app:iconPadding="16dp"
        app:iconGravity="textStart"
        app:icon="@drawable/ic_github_logo"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintBottom_toTopOf="@id/scopesSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        style="@style/SwitchMenuItem"
        android:id="@+id/scopesSwitch"
        android:text="@string/private_repos_access"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="16sp"
        android:textColor="@color/gray_500"
        android:minHeight="40dp"
        android:checked="false"
        android:background="@drawable/background_privacy_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/signInBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:id="@+id/privacyPolicyView"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/gray_300"
        tools:text="@string/privacy_policy_text"/>

    <!-- Do not remove clickable -->
    <FrameLayout
        android:id="@+id/loginProgressView"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#70FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:indeterminateTint="@color/gray_400"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>